Multi Language on Content done // Still working on SEO

--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/icon.svg" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site for great card games" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>GAINIO</title>
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="authModal"></div>
-    <div id="root"></div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="%PUBLIC_URL%/icon.svg" />
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="Web site for great card games" />
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <title>GAINIO</title>
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Roboto&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body data-lang="EN">
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="authModal"></div>
+        <div id="root"></div>
+    </body>
 </html>
